06/11/2003 Bob Rossi <bob_rossi@cox.net>

	* sources.h,added field covered_lines to list_node: This field is used
	to record all the line numbers ( per file ) that gdb has directed the 
	user to go to. This was inteded to work with actuall lines the user has
	covered. However, if the user does up/down, then those lines get added
	also.
	* sources.c: Changed some calls from malloc to xmalloc. 
	Added new option called line_coverage_option.
	* interface.c: added call to redisplay the screen when a command is
	recieved via the status bar.
	* commands.c: Added new command line_coverage_option.

06/04/2003 Bob Rossi <bob_rossi@cox.net>

    * cgdb.c: process_commands, changed interface between cgdb/tgdb.
    tgdb now sends atomic commands. self contained.

06/01/2003 Bob Rossi <bob_rossi@cox.net>
    
    * cgdb.c: init_home_dir now uses fs_util interface instead of
    trying to figure out paths itself.
    * cgdb.c: create_help_file now also uses fs_util interface.

06/01/2003 Bob Rossi <bob_rossi@cox.net>

    * cgdb.c: tgdb interface changed. Removing old call to tgdb_init and 
    tgdb_start and calling only tgdb_init with the correct parameters.

version 0.3.1 (04/28/2003):

04/27/2003 Bob Rossi <bob_rossi@cox.net>

    * Reorganized the cvs tree

version 0.3.0 (04/11/2003):

04/11/2003 Bob Rossi <bob_rossi@cox.net>

    * Focus initially set to GDB window

04/09/2003 Bob Rossi <bob_rossi@cox.net>

    * If start_gdb fails, then cgdb exits cleanly.

04/05/2003 Bob Rossi <bob_rossi@cox.net>

    * Changed CGDB_ESC_KEY to 27 for the several spots still calling wgetch
    * Fixed bug where if you enter a regex and then hit ESC to cancel, the
    line would never go away.

04/03/2003 Bob Rossi <bob_rossi@cox.net>

    * interface.c ( if_draw ): Removed a function that called refresh
    on the status bar. Also, Added a check to refresh the cgdb window
    if focus == cgdb.
    * cgdb.c ( remove realpath ): There is no more call to realpath to 