@@ -1,3 +1,7 @@
+06/12/2003 Bob Rossi <bob_rossi@cox.net>
+
+	* commands.c: sorted VARIABLES structure
+
 06/11/2003 Bob Rossi <bob_rossi@cox.net>
 
 	* sources.h,added field covered_lines to list_node: This field is used
